# aasi-project

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/aasi-cli/: Cargo.toml
crates/aasi-cli/src/: main.rs
crates/aasi-cli/src/commands/: mod.rs
crates/aasi-client/: Cargo.toml
crates/aasi-client/src/: lib.rs  pow.rs  signer.rs
crates/aasi-core/: Cargo.toml
crates/aasi-core/src/: lib.rs  main.rs
crates/aasi-core/src/api/: server.rs
crates/aasi-core/src/core/: embedder.rs  graph.rs  mod.rs  models.rs  ranker.rs  stats.rs
crates/aasi-core/src/crypto/: did.rs  mod.rs  social.rs  verifier.rs
crates/aasi-core/src/storage/: mod.rs  transparency_log.rs  vector_store.rs
crates/aasi-core/tests/: integration_test.rs
crates/aasi-proto/: Cargo.toml  build.rs
crates/aasi-proto/src/: lib.rs
experiments/reproduction/: Cargo.toml
experiments/reproduction/src/: main.rs
infra/: README.md  docker-compose.yml
proto/: aasi.proto
scripts/: reproduce_paper_results.sh  reset_state.sh  run_sybil_scaling_experiment.sh  serve_did.sh
tools/: analyze_defense_impact.py  download_dataset.py  requirements.txt
