[package]
name = "aasi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"

# ort = { version = "2.0.0-rc.4", features = ["download-binaries"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v5"] }
base64 = "0.21"
aasi-proto = { path = "../../crates/aasi-proto" }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
fastembed = "4"
# ort = { version = "2.0.0-rc.4", features = ["download-binaries"] }
# fastembed = "2"
# ort = "2.0" # Explicit ort dependency usually not needed if fastembed manages it, but let's see. 
qdrant-client = "1.12"
futures = "0.3"
rs_merkle = "1.4"
argon2 = "0.5"
ed25519-dalek = "2.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
config = "0.13"
hex = "0.4"
sha2 = "0.10"
chrono = "0.4"
percent-encoding = "2.3.2"
