[package]
name = "aasi-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.22"
ed25519-dalek = "2"
hex = "0.4"
sha2 = "0.10"
plotters = "0.3"
futures = "0.3.31"

aasi-proto = { path = "../../crates/aasi-proto" }
aasi-client = { path = "../../crates/aasi-client" }